--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1118,7 +1118,7 @@ html {
       width: 384px;
       margin: 2.1875rem auto 0 auto;
       display: flex;
-      flex-direction: column-reverse; }
+      flex-direction: column; }
     #main-page .cogitation__scope:first-child {
       padding: 1.25rem 0;
       flex-direction: column; }
