--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -214,7 +214,7 @@ html {
       content: '';
       width: 50px;
       height: 54.47px;
-      background-image: url(../../../../src/assets/images/main-page-main-section-title-tip.png);
+      background-image: url(../images/main-page-main-section-title-tip.png);
       background-size: contain;
       background-position: center;
       background-repeat: no-repeat;
@@ -270,7 +270,7 @@ html {
     content: '';
     width: 15px;
     height: 15px;
-    background-image: url(../../../../src/assets/images/icon-arrow-left.png);
+    background-image: url(../images/icon-arrow-left.png);
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat; }
@@ -279,7 +279,7 @@ html {
     background-color: #FFF1E8; }
     .gallery .swiper-button-prev:hover::after,
     .gallery .swiper-button-next:hover::after {
-      background-image: url(../../../../src/assets/images/icon-arrow-left-active.png); }
+      background-image: url(../images/icon-arrow-left-active.png); }
 
 .gallery .swiper-button-prev {
   left: 2.5%; }
@@ -389,7 +389,7 @@ html {
     width: 24px;
     height: 20px;
     background-color: transparent;
-    background-image: url(../../../../../src/assets/images/icon-burger.png);
+    background-image: url(../assets/images/icon-burger.png);
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
@@ -400,7 +400,7 @@ html {
     width: 18px;
     height: 18px;
     background-color: transparent;
-    background-image: url(../../../../../src/assets/images/icon-dark-cross.png);
+    background-image: url(../assets/images/icon-dark-cross.png);
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
@@ -414,7 +414,7 @@ html {
       content: '';
       width: 450px;
       height: 414px;
-      background-image: url(../../../../../src/assets/images/mobile-menu-bg-organic-shape.png);
+      background-image: url(../assets/images/mobile-menu-bg-organic-shape.png);
       background-size: contain;
       background-position: center;
       background-repeat: no-repeat;
@@ -513,7 +513,7 @@ html {
   width: 100%;
   height: 100%;
   background-color: #FDFFA5;
-  background-image: url(../../../../../src/assets/images/illus-potted-plant.png);
+  background-image: url(../assets/images/illus-potted-plant.png);
   background-size: 159px 319px;
   background-position: right -2.5rem bottom 1.25rem;
   background-repeat: no-repeat;
@@ -550,7 +550,7 @@ html {
         content: '';
         width: 15px;
         height: 15px;
-        background-image: url(../../../../../src/assets/images/icon-light-cross.png);
+        background-image: url(../assets/images/icon-light-cross.png);
         background-size: contain;
         background-position: center;
         background-repeat: no-repeat; }
@@ -595,7 +595,7 @@ html {
     width: 1080px;
     height: 605px;
     background-color: #FFFFA5;
-    background-image: url(../../../../../src/assets/images/illus-potted-plant.png);
+    background-image: url(../assets/images/illus-potted-plant.png);
     background-size: 159px 319px;
     background-position: right -2.5rem bottom 2.5rem;
     background-repeat: no-repeat;
@@ -630,7 +630,7 @@ html {
         content: '';
         width: 15px;
         height: 15px;
-        background-image: url(../../../../../src/assets/images/icon-light-cross.png);
+        background-image: url(../assets/images/icon-light-cross.png);
         background-size: contain;
         background-position: center;
         background-repeat: no-repeat; }
@@ -695,7 +695,7 @@ html {
     content: '';
     width: 19.8px;
     height: 25.59px;
-    background-image: url(../../../../src/assets/images/icon-arrow-top.png);
+    background-image: url(../images/icon-arrow-top.png);
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat; }
@@ -718,7 +718,7 @@ html {
       content: '';
       width: 50px;
       height: 54.47px;
-      background-image: url(../../../../src/assets/images/main-page-main-section-title-tip.png);
+      background-image: url(../images/main-page-main-section-title-tip.png);
       background-size: contain;
       background-position: center;
       background-repeat: no-repeat;
@@ -788,7 +788,7 @@ html {
       content: '';
       width: 1040px;
       height: 621.05px;
-      background-image: url(../../../../src/assets/images/main-page-main-section-bg-organic-shape.png);
+      background-image: url(../images/main-page-main-section-bg-organic-shape.png);
       background-size: contain;
       background-position: center;
       background-repeat: no-repeat;
@@ -973,7 +973,7 @@ html {
       #main-page .cogitation__scope:first-child::after {
         width: 470px;
         height: 461.08px;
-        background-image: url(../../../../src/assets/images/main-page-cogitation-section-scope-1-bg-organic-shape.png);
+        background-image: url(../images/main-page-cogitation-section-scope-1-bg-organic-shape.png);
         top: 12px;
         left: 16px;
         animation: cogitationSlightDisplacingStyle1st 15s linear infinite alternate; }
@@ -1004,7 +1004,7 @@ html {
       #main-page .cogitation__scope:last-child::after {
         width: 530px;
         height: 488.01px;
-        background-image: url(../../../../src/assets/images/main-page-cogitation-section-scope-2-bg-organic-shape.png);
+        background-image: url(../images/main-page-cogitation-section-scope-2-bg-organic-shape.png);
         top: -12px;
         right: -100px;
         animation: cogitationSlightDisplacingStyle2nd 15s linear infinite alternate; }
@@ -1092,12 +1092,12 @@ html {
     #main-page .cogitation__scope-btn-link-text::before {
       width: 20.21px;
       height: 16px;
-      background-image: url(../../../../src/assets/images/icon-back.png);
+      background-image: url(../images/icon-back.png);
       margin-right: .9375rem; }
     #main-page .cogitation__scope-btn-link-text::after {
       width: 16px;
       height: 16px;
-      background-image: url(../../../../src/assets/images/icon-open-new-tab.png);
+      background-image: url(../images/icon-open-new-tab.png);
       margin-left: .9375rem; }
     #main-page .cogitation__scope-btn-link-text span {
       position: relative; }
@@ -1274,7 +1274,7 @@ html {
       content: '';
       width: 840px;
       height: 475.4px;
-      background-image: url(../../../../src/assets/images/main-page-join-section-illus-anim-bg-organic-shape.png);
+      background-image: url(../images/main-page-join-section-illus-anim-bg-organic-shape.png);
       background-size: contain;
       background-position: center;
       background-repeat: no-repeat;
@@ -1325,7 +1325,7 @@ html {
       content: '';
       width: 100%;
       height: 100%;
-      background-image: url(../../../../src/assets/images/main-page-join-section-media-shadow.png);
+      background-image: url(../images/main-page-join-section-media-shadow.png);
       background-size: contain;
       background-position: center;
       background-repeat: no-repeat;
@@ -1485,7 +1485,7 @@ html {
     #main-page .cherish__section:nth-child(1) .cherish__scope:first-child::after {
       width: 900px;
       height: 742.8px;
-      background-image: url(../../../../src/assets/images/main-page-cherish-section-subsection-1-bg-organic-shape.png);
+      background-image: url(../images/main-page-cherish-section-subsection-1-bg-organic-shape.png);
       top: 0;
       left: 0;
       transform: translate(-29.5%, -28%); }
@@ -1498,7 +1498,7 @@ html {
     #main-page .cherish__section:nth-child(2) .cherish__scope:first-child::after {
       width: 1000px;
       height: 742.35px;
-      background-image: url(../../../../src/assets/images/main-page-cherish-section-subsection-2-bg-organic-shape.png);
+      background-image: url(../images/main-page-cherish-section-subsection-2-bg-organic-shape.png);
       right: 0;
       bottom: 0;
       transform: translate(43%, 39.5%); }
@@ -1511,7 +1511,7 @@ html {
     #main-page .cherish__section:nth-child(3) .cherish__scope:first-child::after {
       width: 984.71px;
       height: 655.36px;
-      background-image: url(../../../../src/assets/images/main-page-cherish-section-subsection-3-bg-organic-shape.png);
+      background-image: url(../images/main-page-cherish-section-subsection-3-bg-organic-shape.png);
       top: 0;
       left: 0;
       transform: translate(-34.5%, -21%); }
@@ -1589,7 +1589,7 @@ html {
       content: '';
       width: 100%;
       height: 100%;
-      background-image: url(../../../../src/assets/images/main-page-cherish-section-media-cover-shadow.png);
+      background-image: url(../images/main-page-cherish-section-media-cover-shadow.png);
       background-size: contain;
       background-position: center;
       background-repeat: no-repeat;
@@ -1875,13 +1875,13 @@ html {
         #main-page .podcast__desc p:nth-child(1)::before {
           width: 20px;
           height: 13.1px;
-          background-image: url(../../../../src/assets/images/icon-quotation-marks-up.png);
+          background-image: url(../images/icon-quotation-marks-up.png);
           left: 0;
           transform: translate(calc(-100% - 7px), 0); }
         #main-page .podcast__desc p:nth-child(1)::after {
           width: 17px;
           height: 12.01px;
-          background-image: url(../../../../src/assets/images/icon-quotation-marks-down.png);
+          background-image: url(../images/icon-quotation-marks-down.png);
           right: 0;
           transform: translate(calc(100% + 7px), 0); }
       #main-page .podcast__desc p:nth-child(2) {
@@ -1934,7 +1934,7 @@ html {
       content: '';
       width: 100%;
       height: 100%;
-      background-image: url(../../../../src/assets/images/main-page-podcast-section-media-shadow.png);
+      background-image: url(../images/main-page-podcast-section-media-shadow.png);
       background-size: contain;
       background-position: center;
       background-repeat: no-repeat;
@@ -1992,7 +1992,7 @@ html {
   #main-page .podcast__bg-organic-shape--left::after {
     width: 1000px;
     height: 665.96px;
-    background-image: url(../../../../src/assets/images/main-page-podcast-section-bg-organic-shape-1.png);
+    background-image: url(../images/main-page-podcast-section-bg-organic-shape-1.png);
     bottom: -290px;
     left: -230px;
     animation: podcastSlightDisplacingStyle1st 15s linear infinite alternate; }
@@ -2011,7 +2011,7 @@ html {
   #main-page .podcast__bg-organic-shape--right::after {
     width: 1100px;
     height: 732.08px;
-    background-image: url(../../../../src/assets/images/main-page-podcast-section-bg-organic-shape-2.png);
+    background-image: url(../images/main-page-podcast-section-bg-organic-shape-2.png);
     top: -155px;
     right: -580px;
     animation: podcastSlightDisplacingStyle2nd 15s linear infinite alternate; }
@@ -2106,7 +2106,7 @@ html {
     content: '';
     width: 200px;
     height: 184.5px;
-    background-image: url(../../../../src/assets/images/material-ear.png);
+    background-image: url(../images/material-ear.png);
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
@@ -2125,9 +2125,9 @@ html {
     left: 39px;
     z-index: -1; }
   #main-page .podcast__mtrl-spotlight::before {
-    background-image: url(../../../../src/assets/images/material-spotlight-device.png); }
+    background-image: url(../images/material-spotlight-device.png); }
   #main-page .podcast__mtrl-spotlight::after {
-    background-image: url(../../../../src/assets/images/material-spotlight.png);
+    background-image: url(../images/material-spotlight.png);
     animation: flashing 2.5s infinite ease; }
 
 @keyframes flashing {
