--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -389,7 +389,7 @@ html {
     width: 24px;
     height: 20px;
     background-color: transparent;
-    background-image: url(../assets/images/icon-burger.png);
+    background-image: url(../images/icon-burger.png);
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
@@ -400,7 +400,7 @@ html {
     width: 18px;
     height: 18px;
     background-color: transparent;
-    background-image: url(../assets/images/icon-dark-cross.png);
+    background-image: url(../images/icon-dark-cross.png);
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
@@ -414,7 +414,7 @@ html {
       content: '';
       width: 450px;
       height: 414px;
-      background-image: url(../assets/images/mobile-menu-bg-organic-shape.png);
+      background-image: url(../images/mobile-menu-bg-organic-shape.png);
       background-size: contain;
       background-position: center;
       background-repeat: no-repeat;
@@ -513,7 +513,7 @@ html {
   width: 100%;
   height: 100%;
   background-color: #FDFFA5;
-  background-image: url(../assets/images/illus-potted-plant.png);
+  background-image: url(../images/illus-potted-plant.png);
   background-size: 159px 319px;
   background-position: right -2.5rem bottom 1.25rem;
   background-repeat: no-repeat;
@@ -550,7 +550,7 @@ html {
         content: '';
         width: 15px;
         height: 15px;
-        background-image: url(../assets/images/icon-light-cross.png);
+        background-image: url(../images/icon-light-cross.png);
         background-size: contain;
         background-position: center;
         background-repeat: no-repeat; }
@@ -595,7 +595,7 @@ html {
     width: 1080px;
     height: 605px;
     background-color: #FFFFA5;
-    background-image: url(../assets/images/illus-potted-plant.png);
+    background-image: url(../images/illus-potted-plant.png);
     background-size: 159px 319px;
     background-position: right -2.5rem bottom 2.5rem;
     background-repeat: no-repeat;
@@ -630,7 +630,7 @@ html {
         content: '';
         width: 15px;
         height: 15px;
-        background-image: url(../assets/images/icon-light-cross.png);
+        background-image: url(../images/icon-light-cross.png);
         background-size: contain;
         background-position: center;
         background-repeat: no-repeat; }
